fix: Charts edges alignment

--- a/front-end/src/styles/graphs.css
+++ b/front-end/src/styles/graphs.css
@@ -5,7 +5,7 @@
 }
 
 .graph-container {
-  padding: 1rem;
+  padding-bottom: 1rem;
   width: 100%;
   display: flex;
   justify-content: center;
